--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,3 +25,24 @@
         color: white;
     }
 }
+
+input:disabled, textarea:disabled{
+    cursor: not-allowed;
+}
+
+.filter{
+    border: 1px solid darkgray;
+    padding: 10px;
+    border-radius: 4px;
+
+    span:nth-child(2){
+        margin-left: 10px;
+        margin-right: 20px;
+    }
+
+    span{
+        &:hover{
+            cursor: pointer;
+        }
+    }
+}
